reports/stage_reports/Diagramscene_ultima-syz/20251226_122142/tests_report.txt
[stage] tests
[project] C:\Users\lenovo\Desktop\Diagramscene_ultima-syz
[time] 20251226_122142
[meta] cmd: cmd /c "set PATH=D:\Qt\6.10.1\mingw_64\bin;D:\Qt\Tools\mingw1310_64\bin;%PATH% && cd /d C:\Users\lenovo\Desktop\Diagramscene_ultima-syz && cd tests\generated && qmake tests.pro && mingw32-make clean && mingw32-make -f Makefile.Debug && debug\tests.exe && move debug\*.gc* ."
[meta] cwd: C:\Users\lenovo\Desktop\Diagramscene_ultima-syz
[meta] returncode: 2
[meta] timed_out: False
[meta] timeout_s: 600.0

== findings ==
- tests | error | 测试命令执行失败

== stdout (truncated) ==
mingw32-make -f Makefile.Release clean
mingw32-make[1]: Entering directory 'C:/Users/lenovo/Desktop/Diagramscene_ultima-syz/tests/generated'
del moc\moc_predefs.h
del moc\moc_diagramscene.cpp moc\moc_diagramtextitem.cpp moc\moc_findreplacedialog.cpp moc\moc_mainwindow.cpp
del moc\test_diagramitem.moc moc\test_diagrampath.moc
del obj\test_diagramitem.o obj\test_diagrampath.o obj\arrow.o obj\diagramitem.o obj\diagramitemgroup.o obj\diagrampath.o obj\diagramscene.o obj\diagramtextitem.o obj\findreplacedialog.o obj\mainwindow.o obj\moc_diagramscene.o obj\moc_diagramtextitem.o obj\moc_findreplacedialog.o obj\moc_mainwindow.o
mingw32-make[1]: Leaving directory 'C:/Users/lenovo/Desktop/Diagramscene_ultima-syz/tests/generated'
mingw32-make -f Makefile.Debug clean
mingw32-make[1]: Entering directory 'C:/Users/lenovo/Desktop/Diagramscene_ultima-syz/tests/generated'
del moc\moc_predefs.h
del moc\moc_diagramscene.cpp moc\moc_diagramtextitem.cpp moc\moc_findreplacedialog.cpp moc\moc_mainwindow.cpp
del moc\test_diagramitem.moc moc\test_diagrampath.moc
del obj\test_diagramitem.o obj\test_diagrampath.o obj\arrow.o obj\diagramitem.o obj\diagramitemgroup.o obj\diagrampath.o obj\diagramscene.o obj\diagramtextitem.o obj\findreplacedialog.o obj\mainwindow.o obj\moc_diagramscene.o obj\moc_diagramtextitem.o obj\moc_findreplacedialog.o obj\moc_mainwindow.o
mingw32-make[1]: Leaving directory 'C:/Users/lenovo/Desktop/Diagramscene_ultima-syz/tests/generated'
g++ -fno-keep-inline-dllexport --coverage -g -Wall -Wextra -Wextra -dM -E -o moc\moc_predefs.h D:\Qt\6.10.1\mingw_64\mkspecs\features\data\dummy.cpp
D:\Qt\6.10.1\mingw_64\bin\moc.exe -DUNICODE -D_UNICODE -DWIN32 -DMINGW_HAS_SECURE_API=1 -DQT_WIDGETS_LIB -DQT_SVG_LIB -DQT_GUI_LIB -DQT_TESTLIB_LIB -DQT_CORE_LIB -DQT_TESTCASE_BUILDDIR="\"C:/Users/lenovo/Desktop/Diagramscene_ultima-syz/tests/generated\"" --include C:/Users/lenovo/Desktop/Diagramscene_ultima-syz/tests/generated/moc/moc_predefs.h -ID:/Qt/6.10.1/mingw_64/mkspecs/win32-g++ -IC:/Users/lenovo/Desktop/Diagramscene_ultima-syz/tests/generated -IC:/Users/lenovo/Desktop/Diagramscene_ultima-syz -ID:/Qt/6.10.1/mingw_64/include -ID:/Qt/6.10.1/mingw_64/include/QtWidgets -ID:/Qt/6.10.1/mingw_64/include/QtSvg -ID:/Qt/6.10.1/mingw_64/include/QtGui -ID:/Qt/6.10.1/mingw_64/include/QtTest -ID:/Qt/6.10.1/mingw_64/include/QtCore -ID:/Qt/Tools/mingw1310_64/lib/gcc/x86_64-w64-mingw32/13.1.0/include/c++ -ID:/Qt/Tools/mingw1310_64/lib/gcc/x86_64-w64-mingw32/13.1.0/include/c++/x86_64-w64-mingw32 -ID:/Qt/Tools/mingw1310_64/lib/gcc/x86_64-w64-mingw32/13.1.0/include/c++/backward -ID:/Qt/Tools/mingw1310_64/lib/gcc/x86_64-w64-mingw32/13.1.0/include -ID:/Qt/Tools/mingw1310_64/lib/gcc/x86_64-w64-mingw32/13.1.0/include-fixed -ID:/Qt/Tools/mingw1310_64/x86_64-w64-mingw32/include test_diagramitem.cpp -o moc\test_diagramitem.moc
g++ -c -fno-keep-inline-dllexport --coverage -g -Wall -Wextra -Wextra -fexceptions -mthreads -DUNICODE -D_UNICODE -DWIN32 -DMINGW_HAS_SECURE_API=1 -DQT_WIDGETS_LIB -DQT_SVG_LIB -DQT_GUI_LIB -DQT_TESTLIB_LIB -DQT_CORE_LIB -DQT_TESTCASE_BUILDDIR="\"C:/Users/lenovo/Desktop/Diagramscene_ultima-syz/tests/generated\"" -I. -I../../../Diagramscene_ultima-syz -ID:/Qt/6.10.1/mingw_64/include -ID:/Qt/6.10.1/mingw_64/include/QtWidgets -ID:/Qt/6.10.1/mingw_64/include/QtSvg -ID:/Qt/6.10.1/mingw_64/include/QtGui -ID:/Qt/6.10.1/mingw_64/include/QtTest -ID:/Qt/6.10.1/mingw_64/include/QtCore -Imoc -I/include -ID:/Qt/6.10.1/mingw_64/mkspecs/win32-g++  -o obj\test_diagramitem.o test_diagramitem.cpp

== stderr (truncated) ==
找不到 C:\Users\lenovo\Desktop\Diagramscene_ultima-syz\tests\generated\moc\moc_diagramscene.cpp
找不到 C:\Users\lenovo\Desktop\Diagramscene_ultima-syz\tests\generated\obj\test_diagramitem.o
找不到 C:\Users\lenovo\Desktop\Diagramscene_ultima-syz\tests\generated\moc\moc_predefs.h
找不到 C:\Users\lenovo\Desktop\Diagramscene_ultima-syz\tests\generated\moc\moc_diagramscene.cpp
找不到 C:\Users\lenovo\Desktop\Diagramscene_ultima-syz\tests\generated\moc\test_diagramitem.moc
找不到 C:\Users\lenovo\Desktop\Diagramscene_ultima-syz\tests\generated\obj\test_diagramitem.o
In file included from D:/Qt/6.10.1/mingw_64/include/QtTest/qtesteventloop.h:8,
                 from D:/Qt/6.10.1/mingw_64/include/QtTest/qsignalspy.h:10,
                 from D:/Qt/6.10.1/mingw_64/include/QtTest/QtTest:10,
                 from test_diagramitem.cpp:1:
test_diagramitem.cpp: In member function 'void TestDiagramItem::testSetBrush()':
test_diagramitem.cpp:40:19: error: 'class DiagramItem' has no member named 'brushColor'
   40 |     QCOMPARE(item.brushColor(), newColor);
      |                   ^~~~~~~~~~
D:/Qt/6.10.1/mingw_64/include/QtTest/qtestcase.h:90:26: note: in definition of macro 'QCOMPARE'
   90 |     if (!QTest::qCompare(actual, expected, #actual, #expected, __FILE__, __LINE__))\
      |                          ^~~~~~
test_diagramitem.cpp: In member function 'void TestDiagramItem::testSetFixedSize()':
test_diagramitem.cpp:48:19: error: 'class DiagramItem' has no member named 'size'
   48 |     QCOMPARE(item.size(), newSize);
      |                   ^~~~
D:/Qt/6.10.1/mingw_64/include/QtTest/qtestcase.h:90:26: note: in definition of macro 'QCOMPARE'
   90 |     if (!QTest::qCompare(actual, expected, #actual, #expected, __FILE__, __LINE__))\
      |                          ^~~~~~
mingw32-make: *** [Makefile.Debug:2326: obj/test_diagramitem.o] Error 1
